More fields for TemplatePoolInstance config